<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_alignParentTop="true"
        android:background="@drawable/app_gradient_ver"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <com.pb.criconet.Utills.MytextviewBold
            android:id="@+id/toolbartext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text=""
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.pb.criconet.Utills.MytextviewBold
            android:id="@+id/tvi_upload_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/upload_profile_picture"
            android:textColor="@color/text_grey"
            android:textSize="18sp" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:src="@drawable/app_icon"
            app:civ_border_color="@color/app_blue"
            app:civ_border_width="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:weightSum="2">

            <Button
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_pink_round"
                android:text="@string/camera"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btngalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_pink_round"
                android:text="@string/gallery"
                android:textColor="@color/white" />
        </LinearLayout>


        <com.pb.criconet.Utills.Mytextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/skip_step"
            android:textColor="#000"
            android:textSize="12sp" />

        <com.pb.criconet.Utills.MytextviewBold
            android:id="@+id/tviSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/skip_now"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>