<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckground"
    android:gravity="center_horizontal">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edttxt_old_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editbox"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:theme="@style/MyHintText" />


        <EditText
            android:id="@+id/edttxt_new_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editbox"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:theme="@style/MyHintText" />

        <EditText
            android:id="@+id/edttxt_conf_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/editbox"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:theme="@style/MyHintText" />


        <com.pb.criconet.Utills.MytextviewBold
            android:id="@+id/change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/btn_bg_pink_round"
            android:gravity="center_horizontal"
            android:padding="13dp"
            android:text="@string/update_password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
