<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke">

    <LinearLayout
        android:id="@+id/send_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:src="@drawable/user_default" />

            <EditText
                android:id="@+id/up_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/user_image"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/what_s_on_your_mind"
                android:inputType="textMultiLine"
                android:padding="2dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

            <ImageView
                android:id="@+id/up_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/up_image"
                android:scaleType="fitXY" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_smoke"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_toLeftOf="@+id/p"
                    android:padding="5dp"
                    android:src="@drawable/photo" />

                <com.pb.criconet.Utills.Mytextview
                    android:id="@+id/p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/photo"
                    android:textColor="@color/text_grey2"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/add_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_toLeftOf="@+id/v"
                    android:padding="5dp"
                    android:src="@drawable/video" />

                <com.pb.criconet.Utills.Mytextview
                    android:id="@+id/v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/video"
                    android:textColor="@color/text_grey2"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/add_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_toLeftOf="@+id/c"
                    android:padding="5dp"
                    android:src="@drawable/chat" />

                <com.pb.criconet.Utills.Mytextview
                    android:id="@+id/c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/chat"
                    android:textColor="@color/text_grey2"
                    android:textSize="15sp" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


    <com.allattentionhere.autoplayvideos.AAH_CustomRecyclerView
        android:id="@+id/post_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/send_panel"
        android:divider="@color/black"
        android:dividerHeight="2dp"
        android:padding="10dp" />


    <TextView
        android:id="@+id/notfound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/notfound"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />


</RelativeLayout>
