<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckground">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvChooseSpecialites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/choose_your_specialities"
                android:textColor="#565C69"
                android:textSize="15sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recylerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


            <TextView
                android:id="@+id/tvCoachProfileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/coach_profile_title"
                android:textColor="#565C69"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etProfileTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:paddingStart="@dimen/_5sdp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/editbox" />

            <TextView
                android:id="@+id/tvTotalExperience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/total_experience"
                android:textColor="#565C69"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinerYear"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/editbox"
                    android:overlapAnchor="false" />

                <Spinner
                    android:id="@+id/spinerMonth"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/editbox"
                    android:overlapAnchor="false" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvAnyOtherInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/any_other_information"
                android:textColor="#565C69"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etAnyOtherInformation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:paddingStart="@dimen/_5sdp"
                android:gravity="start|top"
                android:background="@drawable/editbox" />


            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/amount_session_30_mins_of_online_e_coaching"
                android:textColor="#565C69"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="10dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinerCurency"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/editbox"
                    android:overlapAnchor="false"
                    tools:ignore="UnusedAttribute" />

                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_5sdp"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/editbox" />

            </LinearLayout>


            <Button
                android:id="@+id/btnSave"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/round_corner_pressed"
                android:text="@string/save_amp_continue"
                android:textColor="@color/white" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>


